<resources>
    <string name="app_name">Get Together!</string>
    <string name="label_get_together">Get Together!</string>
    <string name="content_description_app_logo">App Logo</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="label_button_login">Login</string>
    <string name="label_new_users_click_here">New Users Click Here</string>
    <string name="label_create_username">Username</string>
    <string name="label_create_email">Email</string>
    <string name="label_create_choose_some_interests">Choose some interests:</string>
    <string name="label_checkbox_technology">Technology</string>
    <string name="label_checkbox_gaming">Gaming</string>
    <string name="label_checkbox_travel">Travel</string>
    <string name="label_checkbox_outdoors">Outdoors</string>
    <string name="label_checkbox_food">Food</string>
    <string name="label_checkbox_social">Social</string>
    <string name="label_checkbox_film">Film</string>
    <string name="label_checkbox_music">Music</string>
    <string name="label_checkbox_arts">Arts</string>
    <string name="label_checkbox_pets">Pets</string>
    <string name="label_checkbox_career">Career</string>
    <string name="label_checkbox_sports">Sports</string>
    <string name="label_checkbox_politics">Politics</string>
    <string name="label_button_submit">Submit</string>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_create_user">Create User</string>
    <string name="label_your_groups">Your Groups</string>
    <string name="label_group_events">Upcoming Group Events</string>
    <string name="button_label_find_groups">Find Groups!</string>
    <string name="label_group_empty">You\'re not apart of any groups!</string>
    <string name="link_dash_create_group">CREATE GROUP</string>
    <string name="title_activity_create_group">Create Group</string>

    <string name="action_settings">Settings</string>
    <string name="label_create_group_organizer">Organizer:</string>
    <string name="label_group_create_name">Group Name:</string>
    <string name="label_group_create_description">Group Description:</string>
    <string name="label_create_location">Location</string>
    <string name="title_activity_view_group">Group Details</string>

    <string name="label_view_group_interests">Group Interests:</string>
    <string name="label_group_view_members">Members:</string>
    <string name="button_label_join_group">Join Group</string>
    <string name="button_label_already_a_member">You\'re a member</string>
    <string name="label_profile_location">Location</string>
    <string name="label_profile_interests">Interests</string>
    <string name="label_profile_groups">Groups</string>
    <string name="button_label_add_event">Add Event</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="label_create_event_for_group">For Group:</string>
    <string name="error_create_user">Couldn\'t Create User.</string>
    <string name="label_create_event_title">Title</string>
    <string name="label_create_event_location">Location</string>
    <string name="label_create_event_description">Description</string>
    <string name="label_create_event_date">Date</string>
    <string name="label_create_event_organizer">Organizer:</string>
    <string name="label_create_event_time">Time</string>
    <string name="toast_enter_all_fields">Please fill all fields</string>
    <string name="hint_search_groups">Search Groups ..</string>
    <string name="button_label_search">Search</string>
    <string name="toast_group_name_in_use">A group with that name already exists!</string>
    <string name="button_label_save_group">Save Group</string>
    <string name="button_label_save_event">Save Event</string>
    <string name="menu_item_profile">Profile</string>
</resources>
