<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="edu.ranken.jbuesking.gettogether.ui.activity.CreateUserActivity">

        <TextView
            android:id="@+id/label_create_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_create_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_create_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/hint_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_username" />

        <TextView
            android:id="@+id/label_create_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_create_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password" />

        <TextView
            android:id="@+id/label_create_interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_create_choose_some_interests"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_location" />

        <EditText
            android:id="@+id/text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_create_username" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_create_password" />

        <EditText
            android:id="@+id/text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_create_email" />

        <EditText
            android:id="@+id/text_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.601"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_create_location" />

        <TextView
            android:id="@+id/label_create_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_create_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_email" />


        <CheckBox
            android:id="@+id/checkbox_technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_technology"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_gaming"
            app:layout_constraintStart_toEndOf="@+id/checkbox_gaming" />

        <CheckBox
            android:id="@+id/checkbox_gaming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_gaming"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_create_interests" />

        <CheckBox
            android:id="@+id/checkbox_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_travel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_gaming" />

        <CheckBox
            android:id="@+id/checkbox_outdoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_outdoors"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_technology"
            app:layout_constraintStart_toEndOf="@+id/checkbox_technology" />

        <CheckBox
            android:id="@+id/checkbox_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_food"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_social"
            app:layout_constraintStart_toEndOf="@+id/checkbox_social" />

        <CheckBox
            android:id="@+id/checkbox_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_social"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_pets"
            app:layout_constraintStart_toEndOf="@+id/checkbox_pets" />

        <CheckBox
            android:id="@+id/checkbox_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_film"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_music"
            app:layout_constraintStart_toEndOf="@+id/checkbox_music" />

        <CheckBox
            android:id="@+id/checkbox_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_music"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_travel"
            app:layout_constraintStart_toEndOf="@+id/checkbox_travel" />

        <CheckBox
            android:id="@+id/checkbox_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_arts"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_film"
            app:layout_constraintStart_toEndOf="@+id/checkbox_film" />

        <CheckBox
            android:id="@+id/checkbox_pets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_pets"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_sports" />

        <CheckBox
            android:id="@+id/checkbox_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_career"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_sports"
            app:layout_constraintStart_toEndOf="@+id/checkbox_sports" />

        <CheckBox
            android:id="@+id/checkbox_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_sports"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_travel" />

        <CheckBox
            android:id="@+id/checkbox_politics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/label_checkbox_politics"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_career"
            app:layout_constraintStart_toEndOf="@+id/checkbox_career" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_button_submit"
            style="@style/buttonStyle"
            android:onClick="onSaveUser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_social" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>